# jellyfin-magicka

./: .dockerignore  .formatter.exs  .gitignore  .gitmodules  .tool-versions  Dockerfile  LICENSE  README.md  gleam.toml  manifest.toml  mix.exs  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: elixir.yml
assets/: tailwind.config.js
config/: config.exs  dev.exs  example.exs  prod.exs  runtime.exs  test.exs
contrib/: schema.sql
docs/: endpoints.md
lib/: jellyfin.ex  jellyfin_web.ex
lib/jellyfin/: apiserver.ex  application.ex  hls_fragmenter.ex  mailer.ex  repo.ex  system_info.ex
lib/jellyfin/db/: facade.ex
lib/jellyfin/quarks/: case_insensative.ex
lib/jellyfin/routes/: main.ex  system.ex
lib/jellyfin/web/: router.ex
lib/jellyfin_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/jellyfin_web/components/: core_components.ex  layouts.ex
lib/jellyfin_web/controllers/: error_html.ex  error_json.ex  page_controller.ex  page_html.ex  public_info.ex
lib/mix/tasks/: docker.ex  jellyfin.ex  setup.ex
priv/jellyfin/migrations/: 20231019145734_initial_schema.exs
priv/repo/: seeds.exs
priv/repo/migrations/: 20231019145734_initial_schema.exs
pyjellyfin/: __main__.py  app.py  main.py
pyjellyfin/routes/: api.py  system.py  webui.py
src/: jellyfin.gleam
src/jellyfin/: router.gleam
test/: jellyfin_elixir_test.exs  test_helper.exs
test/jellyfin/: apiserver_test.exs
test/jellyfin_web/controllers/: error_html_test.exs  error_json_test.exs  page_controller_test.exs  (+1 more)
test/support/: conn_case.ex  data_case.ex
(+2 files in other folders)
